--- a/app/src/main/res/layout/folder_item.xml
+++ b/app/src/main/res/layout/folder_item.xml
@@ -1,16 +1,30 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:orientation="horizontal"
+    android:padding="16dp"
+    android:focusable="false"
+
+    android:focusableInTouchMode="false">
 
     <TextView
         android:id="@+id/folder_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:layout_weight="1"
+        android:background="@drawable/pink_button_selector"
+        android:textColor="@android:color/white"/>
+
+    <ImageView
+        android:id="@+id/menu_button"
+        style="@style/ExoMediaButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="Menu"
         android:focusable="true"
         android:focusableInTouchMode="true"
-        android:textColor="@android:color/white" />
+        android:background="@drawable/pink_button_selector"
+        android:src="@drawable/ic_more_vert"
+        android:padding="8dp"/>
 </LinearLayout>
